AC_INIT(include/undo.h)
AM_INIT_AUTOMAKE(libundo, 0.8.0)

AC_SUBST(UNDO_CURRENT)
AC_SUBST(UNDO_REVISION)
AC_SUBST(UNDO_AGE)

UNDO_CURRENT=1
UNDO_REVISION=0
UNDO_AGE=0

AC_CHECK_PROGS(PERL, perl5 perl, NONE)

AC_LIBTOOL_WIN32_DLL
AM_PROG_LIBTOOL

AC_OUTPUT([Makefile doc/Makefile include/Makefile src/Makefile test/Makefile
	   test/test-undo.sh],
	  [chmod a+x test/test-undo.sh])
