INCLUDES = -I${top_srcdir}/include

lib_LTLIBRARIES = libundo.la

libundo_la_SOURCES = \
    undo_error.h \
    undo_history.h \
    undo_memory.h \
    undo_memory_stream.h \
    undo_private.h \
    \
    undo_error.c \
    undo_history.c \
    undo_session.c \
    undo_memory_stream.c \
    undo_memory.c
